--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -1,123 +1,124 @@
 {{> header}}
 <div class="container array">
-   <div class="row">
-      <div class="col text-center">
-         <h2>About Me</h2>
-         <br>
-         <br>
-      </div>
-   </div>
-   <div class="row">
-      <div class="col-6">
-         <p style="color: #292929; margin-bottom: 20px; font-size: 27px; padding-left: 2px"><i class="fas fa-user-tie"></i></p>
-         <ul style="list-style: none;">
-            <li>Analytical thinking and excellent attention to detail.</li>
-            <li>Team oriented approach.</li>
-            <li>Motivated self starter who believes in high standards as a way of work.</li>
-            <li>Curious engineering-minded individuals.</li>
-            <li>Passionate, collaborative and results oriented.</li>
-            <li>Always open to acquire new knowledge and skills.</li>
-            <li>Experience in a dynamic and multicultural work environment.</li>
-            <li>Ability to prioritize and meet deadlines.</li>
-         </ul>
-         <br>
-         <a href="" download style="padding-left: 1em; display: none">
-            <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
-         </a>
-      </div>
+    <div class="row">
+        <div class="col text-center">
+            <h2>About Me</h2>
+            <br>
+            <br>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <p style="color: #292929; margin-bottom: 20px; font-size: 27px; padding-left: 2px">
+                <i class="fas fa-user-tie"></i></p>
+            <ul style="list-style: none;">
+                <li>Analytical thinking and excellent attention to detail.</li>
+                <li>Team oriented approach.</li>
+                <li>Motivated self starter who believes in high standards as a way of work.</li>
+                <li>Curious engineering-minded individuals.</li>
+                <li>Passionate, collaborative and results oriented.</li>
+                <li>Always open to acquire new knowledge and skills.</li>
+                <li>Experience in a dynamic and multicultural work environment.</li>
+                <li>Ability to prioritize and meet deadlines.</li>
+            </ul>
+            <br>
+            <a href="" download style="padding-left: 1em; display: none">
+                <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
+            </a>
+        </div>
 
 
-      <div class="col-6 skills">
+        <div class="col-6 skills">
 
-          <span style="margin-bottom: 5px">VueJS</span>
-          <span style="float: right; padding-right: 2%">Beginner</span>
-          <div class="progress" style="width: 98%; height: 10px">
-              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
-                   aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-          <br>
+            <span style="margin-bottom: 5px">VueJS</span>
+            <span style="float: right; padding-right: 2%">Beginner</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
 
-         <span style="margin-bottom: 5px">JavaScript ES6</span>
-         <span style="float: right; padding-right: 2%">Advanced</span>
-         <div class="progress" style="width: 98%; height: 10px">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
-                 aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-         <br>
+            <span style="margin-bottom: 5px">JavaScript ES6</span>
+            <span style="float: right; padding-right: 2%">Advanced</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
 
-          <span style="margin-bottom: 5px">SASS</span>
-          <span style="float: right; padding-right: 2%">Beginner</span>
-          <div class="progress" style="width: 98%; height: 10px">
-              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
-                   aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-          <br>
+            <span style="margin-bottom: 5px">SASS</span>
+            <span style="float: right; padding-right: 2%">Beginner</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
 
-         <span style="margin-bottom: 5px">CSS3 / HTML5</span>
-         <span style="float: right; padding-right: 2%">Proficiency</span>
-         <div class="progress" style="width: 98%; height: 10px">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
-                 aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
+            <span style="margin-bottom: 5px">CSS3 / HTML5</span>
+            <span style="float: right; padding-right: 2%">Proficiency</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
 
-         <hr style="float: left; width: 98%; margin-bottom: 30px;">
-         <span style="margin-bottom: 5px;">Git</span>
-         <span style="float: right; padding-right: 2%">Intermediate</span>
-         <div class="progress" style="width: 98%; height: 10px">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
-                 aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-         <br>
+            <hr style="float: left; width: 98%; margin-bottom: 30px;">
+            <span style="margin-bottom: 5px;">Git</span>
+            <span style="float: right; padding-right: 2%">Intermediate</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
 
-         <span style="margin-bottom: 5px">Bootstrap</span>
-         <span style="float: right; padding-right: 2%">Advanced</span>
-         <div class="progress" style="width: 98%; height: 10px">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
-                 aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-         <br>
+            <span style="margin-bottom: 5px">Bootstrap / jQuery</span>
+            <span style="float: right; padding-right: 2%">Advanced</span>
+            <div class="progress" style="width: 98%; height: 10px">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
+                     aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
 
-      </div>
-   </div>
-   <br>
-   <hr>
-   <div class="row">
-      <div class="col-2"></div>
-      <div class="col-8 text-center tech" style="margin-bottom: 50px">
-         <h6 style="margin: 20px">Technologies that I work with:</h6>
-         <img src="./images/vue-js.png" class="tech">
-         <img src="./images/sass.png" class="tech">
-         <img src="./images/HTML.png" class="tech">
-         <img src="./images/JS.png" class="tech">
-         <img src="./images/CSS.png" class="tech">
-         <img src="./images/git.png" class="tech">
-         <img src="./images/PS.png" class="tech">
-         <img src="./images/jQuery.png" class="tech">
-         <img src="./images/ajax.png" class="tech">
-         <img src="./images/BS.png" class="tech">
-         <img src="./images/HB.png" class="tech">
-         <img src="./images/mocha.png" class="tech">
-         <img src="./images/chai.png" class="tech">
-         <img src="./images/npm.png" class="tech">
-         <img src="./images/api.png" class="tech">
-         <img src="./images/regEx.png" class="tech">
-         <img src="./images/webpack.png" class="tech">
-         <img src="./images/corel.png" class="tech">
-      </div>
-      <div class="col-2"></div>
-   </div>
-   <!--<hr>
-   <div class="row">
-       <div class="col-2"></div>
-       <div class="col-8 text-center tech">
-           <h6>Technologies I about to master in 2019:</h6>
-           <img src="./images/TS.png" class="tech">
-           <img src="./images/node.png" class="tech">
-           <img src="./images/react.png" class="tech">
-           <img src="./images/angular.png" class="tech">
-       </div>
-       <div class="col-2"></div>
-   </div>-->
+        </div>
+    </div>
+    <br>
+    <hr>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8 text-center tech" style="margin-bottom: 50px">
+            <h6 style="margin: 20px">Technologies that I work with:</h6>
+            <img src="./images/vue-js.png" class="tech">
+            <img src="./images/sass.png" class="tech">
+            <img src="./images/HTML.png" class="tech">
+            <img src="./images/JS.png" class="tech">
+            <img src="./images/CSS.png" class="tech">
+            <img src="./images/git.png" class="tech">
+            <img src="./images/ajax.png" class="tech">
+            <img src="./images/jQuery.png" class="tech">
+            <img src="./images/BS.png" class="tech">
+            <img src="./images/HB.png" class="tech">
+            <img src="./images/mocha.png" class="tech">
+            <img src="./images/chai.png" class="tech">
+            <img src="./images/npm.png" class="tech">
+            <img src="./images/api.png" class="tech">
+            <img src="./images/regEx.png" class="tech">
+            <img src="./images/webpack.png" class="tech">
+            <img src="./images/corel.png" class="tech">
+            <img src="./images/PS.png" class="tech">
+        </div>
+        <div class="col-2"></div>
+    </div>
+    <!--<hr>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8 text-center tech">
+            <h6>Technologies I about to master in 2019:</h6>
+            <img src="./images/TS.png" class="tech">
+            <img src="./images/node.png" class="tech">
+            <img src="./images/react.png" class="tech">
+            <img src="./images/angular.png" class="tech">
+        </div>
+        <div class="col-2"></div>
+    </div>-->
 </div>
 <script>barAnimation()</script>
 {{> footer}}
