--- a/views/array/experience/experience.hbs
+++ b/views/array/experience/experience.hbs
@@ -5,9 +5,52 @@
             <h2>Experience</h2>
             <br>
             <br>
-            {{# each jobs}}
-                {{> job}}
-            {{/each}}
+
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4" style="margin-bottom: 10px">
+                    <p class="years">2019 - Present</p>
+                    <img class="enlarge-B" src="./images/Neterra-log.png" data-alt-src="./images/color-Neterra-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
+                </div>
+                <div class="col-4"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4" style="margin-bottom: 10px">
+                    <p class="years">2014 - 2019</p>
+                    <img class="enlarge-B" src="./images/Wall-log.png" data-alt-src="./images/color-Wall-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
+                </div>
+                <div class="col-4"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4" style="margin-bottom: 10px">
+                    <p class="years">2013 - 2014</p>
+                    <img class="enlarge-B" src="./images/dhl-log.png" data-alt-src="./images/color-dhl-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
+                </div>
+                <div class="col-4"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4" style="margin-bottom: 10px">
+                    <p class="years">2012 - 2013</p>
+                    <img class="enlarge-B" src="./images/ikea-log.png" data-alt-src="./images/color-ikea-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
+                </div>
+                <div class="col-4"></div>
+            </div>
+
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4" style="margin-bottom: 10px">
+                    <p class="years">2009 - 2012</p>
+                    <img class="enlarge-B" src="./images/sug-log.png" data-alt-src="./images/color-sug-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
+                </div>
+                <div class="col-4"></div>
+            </div>
+
         </div>
     </div>
 </div>
