--- a/views/array/experience/experience.hbs
+++ b/views/array/experience/experience.hbs
@@ -9,8 +9,11 @@
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-4" style="margin-bottom: 10px">
+                    <a href="https://neterra.net" target="_blank">
+                        <img class="enlarge-B" src="./images/Neterra-log.png" data-alt-src="./images/color-Neterra-log.png">
+                    </a>
+                    <p class="job-title">Junior Front-Еnd Developer</p>
                     <p class="years">2019 - Present</p>
-                    <img class="enlarge-B" src="./images/Neterra-log.png" data-alt-src="./images/color-Neterra-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
                 </div>
                 <div class="col-4"></div>
             </div>
@@ -18,8 +21,11 @@
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-4" style="margin-bottom: 10px">
+                    <a href="https://www.walltopia.com" target="_blank">
+                        <img class="enlarge-B" src="./images/Wall-log.png" data-alt-src="./images/color-Wall-log.png">
+                    </a>
+                    <p class="job-title">Head of Non-steel Constructions</p>
                     <p class="years">2014 - 2019</p>
-                    <img class="enlarge-B" src="./images/Wall-log.png" data-alt-src="./images/color-Wall-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
                 </div>
                 <div class="col-4"></div>
             </div>
@@ -27,8 +33,11 @@
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-4" style="margin-bottom: 10px">
+                    <a href="https://parcel.dhl.co.uk" target="_blank">
+                        <img class="enlarge-B" src="./images/dhl-log.png" data-alt-src="./images/color-dhl-log.png">
+                    </a>
+                    <p class="job-title">Warehouse Organizer</p>
                     <p class="years">2013 - 2014</p>
-                    <img class="enlarge-B" src="./images/dhl-log.png" data-alt-src="./images/color-dhl-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
                 </div>
                 <div class="col-4"></div>
             </div>
@@ -36,8 +45,11 @@
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-4" style="margin-bottom: 10px">
+                    <a href="https://www.ikea.com" target="_blank">
+                        <img class="enlarge-B" src="./images/ikea-log.png" data-alt-src="./images/color-ikea-log.png">
+                    </a>
+                    <p class="job-title">Kitchen design</p>
                     <p class="years">2012 - 2013</p>
-                    <img class="enlarge-B" src="./images/ikea-log.png" data-alt-src="./images/color-ikea-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
                 </div>
                 <div class="col-4"></div>
             </div>
@@ -45,8 +57,9 @@
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-4" style="margin-bottom: 10px">
+                    <img class="enlarge-B" src="./images/sug-log.png" data-alt-src="./images/color-sug-log.png" onclick="window.location.href='#'">
+                    <p class="job-title">Founder / Designer</p>
                     <p class="years">2009 - 2012</p>
-                    <img class="enlarge-B" src="./images/sug-log.png" data-alt-src="./images/color-sug-log.png" onclick="window.location.href='#/job-description/{{_id}}'">
                 </div>
                 <div class="col-4"></div>
             </div>
