--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -6,19 +6,15 @@
                     <li>
                         <span class="navbar-brand">
                            <a id="aleks" href="#">
-                              {Aleksov}
+                              <img src="images/aleksov-logo.svg" align="center">
                            </a>
-                            <button id="navBtn" class="navbar-toggler" type="button" data-toggle="collapse"
-                                    data-target="#navbarColor03"
-                                    aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
                         </span>
                     </li>
                 </ul>
             </div>
             <div id="first-col-right" class="col-10">
-                <ul class="navbar-nav mr-auto align-right">
+
+                <ul id="my-site-nav" class="navbar-nav mr-auto align-right">
                     <div class="collapse navbar-collapse nav-buttons" id="navbarColor03">
                         <li><a class="nav-link" href="#/home">Home</a></li>
                         <li><a class="nav-link" href="#/about">About</a></li>
@@ -28,6 +24,13 @@
                         <li><a class="nav-link" href="#/contacts">Contacts</a></li>
                     </div>
                 </ul>
+
+                <button id="navBtn" class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarColor03"
+                        aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
             </div>
         </div>
     </nav>
