--- a/views/array/education/education.hbs
+++ b/views/array/education/education.hbs
@@ -10,7 +10,9 @@
                 <div class="col-3"></div>
                 <div class="col-6" style="margin-bottom: 10px">
                     <p class="years">2018 - 2019</p>
-                    <img class="enlarge-B" src="./images/Softuni.png" data-alt-src="./images/color-Softuni.png" onclick="window.location.href='#/{{education}}'">
+                    <a href="https://softuni.bg/professions/javascript" target="_blank">
+                        <img class="enlarge-B" src="./images/Softuni.png" data-alt-src="./images/color-Softuni.png">
+                    </a>
                 </div>
                 <div class="col-3"></div>
             </div>
@@ -19,7 +21,9 @@
                 <div class="col-3"></div>
                 <div class="col-6" style="margin-bottom: 10px">
                     <p class="years">2006 - 2010</p>
-                    <img class="enlarge-B" src="./images/ForestUni.png" data-alt-src="./images/color-ForestUni.png" onclick="window.location.href='#/{{education}}'">
+                    <a href="https://ltu.bg/bg/%D1%84%D0%B0%D0%BA%D1%83%D0%BB%D1%82%D0%B5%D1%82-%D0%B3%D0%BE%D1%80%D1%81%D0%BA%D0%B0-%D0%BF%D1%80%D0%BE%D0%BC%D0%B8%D1%88%D0%BB%D0%B5%D0%BD%D0%BE%D1%81%D1%82/%D0%BA%D0%B0%D1%82%D0%B5%D0%B4%D1%80%D0%B8/%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%B8%D0%BE%D1%80-%D0%B8-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD-%D0%BD%D0%B0-%D0%BC%D0%B5%D0%B1%D0%B5%D0%BB%D0%B8/%D0%B7%D0%B0-%D0%BA%D0%B0%D1%82%D0%B5%D0%B4%D1%80%D0%B0%D1%82%D0%B0" target="_blank">
+                        <img class="enlarge-B" src="./images/ForestUni.png" data-alt-src="./images/color-ForestUni.png" onclick="window.location.href='#/{{education}}'">
+                    </a>
                 </div>
                 <div class="col-3"></div>
             </div>
