--- a/views/array/education/education.hbs
+++ b/views/array/education/education.hbs
@@ -9,10 +9,11 @@
             <div class="row">
                 <div class="col-3"></div>
                 <div class="col-6" style="margin-bottom: 10px">
-                    <p class="years">2018 - 2019</p>
                     <a href="https://softuni.bg/professions/javascript" target="_blank">
                         <img class="enlarge-B" src="./images/Softuni.png" data-alt-src="./images/color-Softuni.png">
                     </a>
+                    <p class="field-of-study">Front-end Web Developer</p>
+                    <p class="years">2018 - 2019</p>
                 </div>
                 <div class="col-3"></div>
             </div>
@@ -20,10 +21,11 @@
             <div class="row">
                 <div class="col-3"></div>
                 <div class="col-6" style="margin-bottom: 10px">
-                    <p class="years">2006 - 2010</p>
                     <a href="https://ltu.bg/bg/%D1%84%D0%B0%D0%BA%D1%83%D0%BB%D1%82%D0%B5%D1%82-%D0%B3%D0%BE%D1%80%D1%81%D0%BA%D0%B0-%D0%BF%D1%80%D0%BE%D0%BC%D0%B8%D1%88%D0%BB%D0%B5%D0%BD%D0%BE%D1%81%D1%82/%D0%BA%D0%B0%D1%82%D0%B5%D0%B4%D1%80%D0%B8/%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%B8%D0%BE%D1%80-%D0%B8-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD-%D0%BD%D0%B0-%D0%BC%D0%B5%D0%B1%D0%B5%D0%BB%D0%B8/%D0%B7%D0%B0-%D0%BA%D0%B0%D1%82%D0%B5%D0%B4%D1%80%D0%B0%D1%82%D0%B0" target="_blank">
                         <img class="enlarge-B" src="./images/ForestUni.png" data-alt-src="./images/color-ForestUni.png" onclick="window.location.href='#/{{education}}'">
                     </a>
+                    <p class="field-of-study">Design engineer</p>
+                    <p class="years">2006 - 2010</p>
                 </div>
                 <div class="col-3"></div>
             </div>
