--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -4,7 +4,7 @@
         <div class="col-12 text-center">
             <h2>Portfolio</h2>
             <br>
-            <br>
+            <p>Latest Works</p>
             <div class="row text-center">
 
                 <div class="col-6 projects">
