--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -22,7 +22,7 @@
                 <li>Ability to prioritize and meet deadlines.</li>
             </ul>
             <br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw5qzR8qxvWqPOpqOdqR_ib-PYvxJmrl3HosppugW6hicPzQ/viewform?embedded=true" download style="padding-left: 1em; display: block">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw5qzR8qxvWqPOpqOdqR_ib-PYvxJmrl3HosppugW6hicPzQ/viewform?embedded=true" download style="padding-left: 1em; display: block" target="_blank">
                 <button id="download"><i class="fas fa-lock pr-1"></i> Download CV </button>
             </a>
         </div>
