--- a/views/array/education/education.hbs
+++ b/views/array/education/education.hbs
@@ -12,7 +12,7 @@
                     <a href="https://softuni.bg/professions/javascript" target="_blank">
                         <img class="enlarge-B" src="./images/Softuni.png" data-alt-src="./images/color-Softuni.png">
                     </a>
-                    <p class="field-of-study">Front-end Web Developer</p>
+                    <p class="field-of-study">JavaScript Web Developer</p>
                     <p class="years">2018 - 2019</p>
                 </div>
                 <div class="col-3"></div>
