--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -6,7 +6,7 @@
                     <li>
                         <span class="navbar-brand">
                            <a id="aleks" href="#">
-                              <img src="images/aleksov-logo.svg" align="center">
+                              <img alt="aleksov-logo" src="images/aleksov-logo.svg" align="center">
                            </a>
                         </span>
                     </li>
