--- a/views/common/footer.hbs
+++ b/views/common/footer.hbs
@@ -4,9 +4,9 @@
 </script>
 <footer id="footer" class="footer" style="padding: 0px">
    <div class="row" style="margin: 0px">
-      <div class="col-3"></div>
-      <div id="footer-data" class="col-3" style="text-align: right; margin-top: 11px; padding-right: 10px"></div>
-      <div class="col-3" style="text-align: left; padding: 0px; margin-top: 2px">
+      <div class="col-1"></div>
+      <div class="col-5" id="footer-data" style="text-align: right; margin-top: 11px; padding-right: 10px"></div>
+      <div class="col-5" style="text-align: left; padding: 0px; margin-top: 2px">
 
          <a href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank">
             <i class="fab fa-linkedin-in footer-icons"></i></a>
@@ -18,6 +18,6 @@
             <i class="fab fa-stack-overflow footer-icons"></i></a>
 
       </div>
-      <div class="col-3" style="margin: 0px; padding: 0px"></div>
+      <div class="col-1" style="margin: 0px; padding: 0px"></div>
    </div>
 </footer>
