--- a/views/common/footer.hbs
+++ b/views/common/footer.hbs
@@ -5,7 +5,7 @@
 <footer id="footer" class="footer" style="padding: 0px">
    <div class="row" style="margin: 0px">
       <div class="col-1"></div>
-      <div class="col-5" id="footer-data" style="text-align: right; margin-top: 11px; padding-right: 10px"></div>
+      <div class="col-5" id="footer-data"></div>
       <div class="col-5" style="text-align: left; padding: 0px; margin-top: 2px">
 
          <a href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank">
