--- a/views/common/footer.hbs
+++ b/views/common/footer.hbs
@@ -6,7 +6,7 @@
    <div class="row" style="margin: 0px">
       <div class="col-1"></div>
       <div class="col-5" id="footer-data"></div>
-      <div class="col-5" style="text-align: left; padding: 0px; margin-top: 2px">
+      <div class="col-5" id="footer-links" style="text-align: left; padding: 0px; margin-top: 2px">
 
          <a href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank">
             <i class="fab fa-linkedin-in footer-icons"></i></a>
