--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-6 about-me">
             <p style="color: #292929; margin-bottom: 20px; font-size: 27px; padding-left: 2px">
                 <i class="fas fa-user-tie"></i></p>
             <ul style="list-style: none;">
@@ -22,7 +22,7 @@
                 <li>Ability to prioritize and meet deadlines.</li>
             </ul>
             <br>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdw5qzR8qxvWqPOpqOdqR_ib-PYvxJmrl3HosppugW6hicPzQ/viewform?embedded=true" download style="padding-left: 1em; display: block" target="_blank">
+            <a class="download-btn-wrapper" href="https://docs.google.com/forms/d/e/1FAIpQLSdw5qzR8qxvWqPOpqOdqR_ib-PYvxJmrl3HosppugW6hicPzQ/viewform?embedded=true" download style="padding-left: 1em; display: block" target="_blank">
                 <button id="download"><i class="fas fa-lock pr-1"></i> Download CV </button>
             </a>
         </div>
@@ -83,8 +83,7 @@
     <br>
     <hr>
     <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8 text-center tech" style="margin-bottom: 50px">
+        <div class="col-12 text-center tech-wrapper" style="margin-bottom: 50px">
             <h6 style="margin: 20px">Technologies that I work with:</h6>
             <img src="./images/vue-js.png" class="tech">
             <img src="./images/sass.png" class="tech">
@@ -105,7 +104,6 @@
             <img src="./images/corel.png" class="tech">
             <img src="./images/PS.png" class="tech">
         </div>
-        <div class="col-2"></div>
     </div>
     <!--<hr>
     <div class="row">
