--- a/views/array/contacts/contacts.hbs
+++ b/views/array/contacts/contacts.hbs
@@ -1,57 +1,54 @@
 {{> header}}
 
 <div class="container array">
-   <div class="row">
-      <div class="col text-center">
-         <h2 style="margin-bottom: 20px">Contacts</h2>
-         <br>
-      </div>
-   </div>
-
-   <div class="row" style="margin-bottom: 30px">
-      <div class="col-1"></div>
-      <div class="col-3 text-center">
-         <i class="fas fa-envelope-open contacts"></i>
-      </div>
-      <div class="col-4 text-center">
-         <i class="fas fa-map-marked-alt contacts"></i>
-      </div>
-      <div class="col-3 text-center">
-         <i class="fas fa-mobile-alt contacts"></i>
-      </div>
-      <div class="col-1"></div>
-   </div>
-
-   <div class="row">
-      <div class="col-1"></div>
-      <div class="col-3 text-center">
-         <h5>E-mail:</h5>
-         <img src="./images/e.png" style="width: 173px">
-      </div>
-      <div class="col-4 text-center">
-         <h5>Address:</h5>
-         <p style="margin-bottom: 10px">1618 Sofia, Bulgaria</p>
-         <img id="img">
-         <p id="temp" style="margin-bottom: 0px"></p>
-         <p id="description" style="margin-bottom: 0px"></p>
-      </div>
-      <div class="col-3 text-center">
-         <h5>Phone:</h5>
-         <p>(+359) 888 199 889</p>
-      </div>
-      <div class="col-1"></div>
-   </div>
-   <br>
-
-   <!--
     <div class="row">
         <div class="col text-center">
-            <button style="margin-top: -10px" type="button" class="btn btn-primary btn-sm"
-                    onclick="window.location.href='#/message'">message me
-            </button>
+            <h2 style="margin-bottom: 20px">Contacts</h2>
+            <br>
         </div>
     </div>
-    -->
+
+    <div class="row">
+        <div class="col-12">
+
+            <div class="my-contacts">
+
+                <div class="text-center">
+                    <i class="fas fa-envelope-open contacts"></i>
+                    <h5>E-mail:</h5>
+                    <img class="m-contact" src="./images/e.png">
+                </div>
+
+                <div class="text-center">
+                    <i class="fas fa-map-marked-alt contacts"></i>
+                    <h5>Address:</h5>
+                    <p style="margin-bottom: 10px">1618 Sofia, Bulgaria</p>
+                    <img id="img">
+                    <p id="temp" style="margin-bottom: 0px"></p>
+                    <p id="description" style="margin-bottom: 0px"></p>
+                </div>
+
+                <div class="text-center">
+                    <i class="fas fa-mobile-alt contacts"></i>
+                    <h5>Phone:</h5>
+                    <p>(+359) 888 199 889</p>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    <br>
+
+    <!--
+     <div class="row">
+         <div class="col text-center">
+             <button style="margin-top: -10px" type="button" class="btn btn-primary btn-sm"
+                     onclick="window.location.href='#/message'">message me
+             </button>
+         </div>
+     </div>
+     -->
 
 </div>
 <script>window.onload = getWeather()</script>
