--- a/views/array/experience/experience.hbs
+++ b/views/array/experience/experience.hbs
@@ -7,61 +7,61 @@
             <br>
 
             <div class="row">
-                <div class="col-4"></div>
-                <div class="col-4" style="margin-bottom: 10px">
+                <div class="col-2"></div>
+                <div class="col-8 xp-info" style="margin-bottom: 10px">
                     <a href="https://neterra.net" target="_blank">
                         <img class="enlarge-B" src="./images/Neterra-log.png" data-alt-src="./images/color-Neterra-log.png">
                     </a>
-                    <p class="job-title">Junior Front-Еnd Developer</p>
+                    <p class="job-title">Junior Front-End Developer</p>
                     <p class="years">2019 - Present</p>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-2"></div>
             </div>
 
             <div class="row">
-                <div class="col-4"></div>
-                <div class="col-4" style="margin-bottom: 10px">
+                <div class="col-2"></div>
+                <div class="col-8 xp-info" style="margin-bottom: 10px">
                     <a href="https://www.walltopia.com" target="_blank">
                         <img class="enlarge-B" src="./images/Wall-log.png" data-alt-src="./images/color-Wall-log.png">
                     </a>
                     <p class="job-title">Head of Non-steel Constructions</p>
                     <p class="years">2014 - 2019</p>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-2"></div>
             </div>
 
             <div class="row">
-                <div class="col-4"></div>
-                <div class="col-4" style="margin-bottom: 10px">
+                <div class="col-2"></div>
+                <div class="col-8 xp-info" style="margin-bottom: 10px">
                     <a href="https://parcel.dhl.co.uk" target="_blank">
                         <img class="enlarge-B" src="./images/dhl-log.png" data-alt-src="./images/color-dhl-log.png">
                     </a>
                     <p class="job-title">Warehouse Organizer</p>
                     <p class="years">2013 - 2014</p>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-2"></div>
             </div>
 
             <div class="row">
-                <div class="col-4"></div>
-                <div class="col-4" style="margin-bottom: 10px">
+                <div class="col-2"></div>
+                <div class="col-8 xp-info" style="margin-bottom: 10px">
                     <a href="https://www.ikea.com" target="_blank">
                         <img class="enlarge-B" src="./images/ikea-log.png" data-alt-src="./images/color-ikea-log.png">
                     </a>
                     <p class="job-title">Kitchen design</p>
                     <p class="years">2012 - 2013</p>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-2"></div>
             </div>
 
             <div class="row">
-                <div class="col-4"></div>
-                <div class="col-4" style="margin-bottom: 10px">
+                <div class="col-2"></div>
+                <div class="col-8 xp-info" style="margin-bottom: 10px">
                     <img class="enlarge-B" src="./images/sug-log.png" data-alt-src="./images/color-sug-log.png" onclick="window.location.href='#'">
                     <p class="job-title">Founder / Designer</p>
                     <p class="years">2009 - 2012</p>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-2"></div>
             </div>
 
         </div>
