--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -6,7 +6,7 @@
             <h1>ALEKSANDAR HRISTOV</h1>
             <div style="text-align: center">
                 <hr>
-                <p>Designer / Junior Front-Еnd Developer</p>
+                <p>Designer / Junior Front-End Developer</p>
                 <hr>
             </div>
         </div>
