--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -95,13 +95,16 @@
             <img src="./images/jQuery.png" class="tech">
             <img src="./images/BS.png" class="tech">
             <img src="./images/HB.png" class="tech">
+            <img src="./images/word-press.png" class="tech">
             <img src="./images/mocha.png" class="tech">
             <img src="./images/chai.png" class="tech">
             <img src="./images/npm.png" class="tech">
             <img src="./images/api.png" class="tech">
             <img src="./images/regEx.png" class="tech">
+            <img src="./images/node.png" class="tech">
+            <img src="./images/express.png" class="tech">
             <img src="./images/webpack.png" class="tech">
-            <img src="./images/corel.png" class="tech">
+            <img src="./images/gulp.png" class="tech">
             <img src="./images/PS.png" class="tech">
         </div>
     </div>
