--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="col" style="margin-top: 10px">
-            <h6 style="text-align:center; color:#b7b7b7">View my portfolio <a style="color: #1A1A1A" href="#/portfolio">here</a></h6>
+            <h6 style="text-align:center; color:#b7b7b7">View more about me <a style="color: #1A1A1A" href="#/about">here</a></h6>
         </div>
     </div>
 </div>
