--- a/views/array/experience/experience.hbs
+++ b/views/array/experience/experience.hbs
@@ -24,7 +24,7 @@
                     <a href="https://www.walltopia.com" target="_blank">
                         <img class="enlarge-B" src="./images/Wall-log.png" data-alt-src="./images/color-Wall-log.png">
                     </a>
-                    <p class="job-title">Head of Non-steel Constructions</p>
+                    <p class="job-title">Engineer / Project Manager</p>
                     <p class="years">2014 - 2019</p>
                 </div>
                 <div class="col-2"></div>
