--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ li span.navbar-brand {
 
 .array {
     margin-top: -91px;
-    min-height: 100vh;
+    min-height: calc(100vh + 54px);
     padding-top: 214px;
 }
 
