--- a/styles/media.css
+++ b/styles/media.css
@@ -110,37 +110,48 @@
     }
 
     /*  portfolio  & education */
+    .projects {
+      padding-bottom: 2em;
+    }
+
     .projects .flip-card {
         flex: 1 1 40%;
         margin: 5% 10%;
         min-height: 350px;
     }
 
-    .xp-info .enlarge-B,
-    .xp-info .enlarge-B:hover {
-        width: 70%;
-        height: auto;
+    .projects:after {
+        content: '';
+        display: block;
+        flex: 0 0 0;
+        margin: 0;
     }
 
-    .xp-info:not(:first-child) {
-        margin-top: 0.5rem;
-    }
+.xp-info .enlarge-B,
+.xp-info .enlarge-B:hover {
+    width: 70%;
+    height: auto;
+}
 
-    .xp-info p {
-        font-size: 0.9rem;
-    }
+.xp-info:not(:first-child) {
+    margin-top: 0.5rem;
+}
 
-    .my-contacts .text-center {
-        flex: 1 1 70%;
-        margin: 2%;
-        font-size: 0.8rem;
-    }
+.xp-info p {
+    font-size: 0.9rem;
+}
 
-    .my-contacts .text-center .m-contact {
-        width: 375px;
-    }
+.my-contacts .text-center {
+    flex: 1 1 70%;
+    margin: 2%;
+    font-size: 0.8rem;
+}
 
-    .job-title, .field-of-study {
-        margin-top: 17px;
-    }
+.my-contacts .text-center .m-contact {
+    width: 375px;
+}
+
+.job-title, .field-of-study {
+    margin-top: 17px;
+}
 }
